fabric/testdata/out/ing_spp-product-search-second-post-api-product-queries-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/product-queries\") \u0026\u0026 Method(\"POST\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"d06ca474-7647-11e9-912e-0a13213f0924","deployment-id":"d-22bdw3hrdcuoo7xpajv9ftc9ae"},"name":"spp-product-search-second-post-api-product-queries-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-second.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-second","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-product-search-second-test.zalandoapis.com", [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/api/product-queries") && Method("POST")
      && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-19T11:08:27Z"
  generation: 1
  labels:
    controller-uid: d06ca474-7647-11e9-912e-0a13213f0924
    deployment-id: d-22bdw3hrdcuoo7xpajv9ftc9ae
  name: spp-product-search-second-post-api-product-queries-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-second
    uid: d06ca474-7647-11e9-912e-0a13213f0924
  resourceVersion: "1357490017"
  uid: 9009abc3-9282-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: spp-product-search-second.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-second
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-product-search-second-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-second
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
